[bdist_wheel]
# set universal = 1 if Python 2 and 3 are supported
;universal = 1

[metadata]
# Please let's reserve the namespace ``stressor-TASKNAME`` for 'official'
# extensions.
# If you publish your own custom extension on PyPI, choose a name like
# `stressor-USER-TASKNAME` or similar:
name = stressor-ps

version = attr: stressor_ps.__version__
author = Martin Wendt
author_email = stressor@wwwendt.de
maintainer = Martin Wendt
maintainer_email = stressor@wwwendt.de
url = https://github.com/mar10/stressor-ps/
description = Add a 'ps' task to stressor
long_description = file: README.md
long_description_content_type = text/markdown
keywords = stressor, stressor-plugin
license = MIT
license_file = LICENSE.txt
classifiers =
    Development Status :: 3 - Alpha
    # Development Status :: 4 - Beta
    # Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Quality Assurance
    Topic :: Software Development :: Testing
    Topic :: Software Development :: Testing :: Traffic Generation

[options]
py_modules = 
    stressor_ps

install_requires =

[options.entry_points]
# Plugins are found by the 'stressor.tasks' namespace.
# The 'register()' function is then called by the plugin loader.
# The 'ps' name is used as stressor task type name-
stressor.plugins =
    ps = stressor_ps:register
